--- a/config_sample.env
+++ b/config_sample.env
@@ -1,11 +1,9 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6906957830:AAFBrso1x1dTAqOXlhKCG-V3F2BT40TMacY"                              # Require restart after changing it while bot running
+OWNER_ID = "6940488721"                               # Require restart after changing it while bot running
+TELEGRAM_API = "27475576"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "12b16abd69249bfb65633668a7cc416a"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
@@ -39,8 +37,8 @@ RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/Kingunok/Jk"
+UPSTREAM_BRANCH = "master"
 
 # Leech
 LEECH_SPLIT_SIZE = ""
@@ -51,9 +49,9 @@ LEECH_FILENAME_PREFIX = ""
 DUMP_CHAT_ID = ""
 
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "3609"
 BASE_URL = ""
-BASE_URL_PORT = ""
+BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 
 #Queueing system
